finish point series implementation.

--- a/MetalChartDev/MetalChartDev/TODO.txt
+++ b/MetalChartDev/MetalChartDev/TODO.txt
@@ -3,7 +3,7 @@
 ・ラベル描画用のデリゲートとステートの提供
 ・アニメーション
 ・折れ線のprimitiveをTrianglesからTranangleStripへ
-・折れ線に点描画のための手段を提供する
+・折れ線に点描画のための手段を提供する -> そもそも点描画ができないという罠.
 
 このうち後ろ２つは割とシンプルでやるだけ、多分今日中に終わらせる事ができる。
 ラベルの問題もやり方を考えればまぁなんとかなる。デリゲート側を実装するのは骨が折れそうだが。
