--- a/MetalChartDev/MetalChartDev/TODO.txt
+++ b/MetalChartDev/MetalChartDev/TODO.txt
@@ -102,9 +102,50 @@ Animation側で処理できれば。
 
 で、一通りの簡単な実装はした。どのくらい使えるのかは知らん。
 一回ちゃんと使ってみたい。
+使ってみた。本当に何も心配しなくてよいレベルで動いた。
+多少はTypical Useを意識して便利な実装クラスを用意したほうがいいかもしれないが、
+まぁ実際のところほっとんどBlockAnimationでどうとでもできるレベル。
 
 あと、バッファへの書き込みの同期が取れてないのは、ちゃんとデバッグする。
+なんだろ、ブリッツかな。
+んーそもそも何が原因になってるかわからん・・・.
 
+・・・あぁ書き込みの反映が遅い、よりはもっと現実的な原因がある。
+つまり次のフレームが先に点を追加してしまっているパターン。
+かと思ったが、同期では解決しない。
+となると、ガチでGPUメモリへの書き込みが間に合ってないって事になる。
+・・・どうやらプログラムの整合性云々ではないらしいな。
+・・・かと思ったけど、絶ってぇちげぇ。
+さすがに２サイクル先に書き込んでるのが間に合わないとかありえあいだろ。
+なんっかおかしい。普通の機能拡張より、はるかに面倒だ。
+実際のところ、ドキュメンテーションにはちゃんと書き込みは反映されるってかいてある。
+それが示すところは、何かしらの理由で、
+info.offset / count と実際に書き込まれたデータの間で何かしらの不整合が発生している、
+という事。一番理解できないのは、すでに書き込む位置をずらしてある、という事。
+うんまぁ家で考える。
+
+じゃあ、いよいよ最後のラベル描画について。
+これが終わると、いよいよ他にやる事がなくなる。
+まぁでも、やるしかないか。
+実装系は家で作るにしても、インタフェースくらいはね。
+まずまぁ実装系の選択肢について。
+CoreText / CoreGraphics / UIKit
+まぁこんなところだ。
+
+ただ、ラベルを乗せるにしても何にしても、その位置が確定できない（本当に、Metalがテキストサポートできたら
+話は楽なんだが）。
+んーどしよっかな。
+まぁCoreTextを利用するしかないか。
+でもビュー自体が別になるとクソかったるいから、テクスチャへの描画ができるとすごい楽なんだが
+（あとまぁ使い回しも聞くし）、この辺りを先に整備する必要があるって事かしらね。
+
+うん、実際のところ、CoreTextを使うのが一番ありえないっぽい。
+直接書き込む方法を確立するか、あるいはUILabelを使う方法が一番わかりやすいっぽい。
+ただ、どうやってもコンテナとなるビューと別れてしまうので、使い方が難しいし、
+かなり制限も多い。
+
+あーだめだ、これもう完全にsigned-distance fieldsを使わないとそれらしい形にならん。
+いやっありえん。なんとかプラットフォーム側でサポートしてくんないかな・・・。
 
 
 
