[clean] refactored axis configuration(majorTickCount must be calculated automatically).

--- a/MetalChartDev/MetalChartDev/TODO.txt
+++ b/MetalChartDev/MetalChartDev/TODO.txt
@@ -1,4 +1,5 @@
 
 
-・Axis周りの参照関係がおかしいので修正.
+・Axisを設定するためのクラスが現状Blockしかなくて、内部動作を把握している人間しか扱えない状態になっている。
+そもそもConfigurationは直行する設定が並んでいて、なかなか固定機能化する事が難しい。
 
