[add] add fixed-function axis configurators based on MCBlockAxisConfigurator.

--- a/MetalChartDev/MetalChartDev/TODO.txt
+++ b/MetalChartDev/MetalChartDev/TODO.txt
@@ -2,4 +2,7 @@
 
 ・Axisを設定するためのクラスが現状Blockしかなくて、内部動作を把握している人間しか扱えない状態になっている。
 そもそもConfigurationは直行する設定が並んでいて、なかなか固定機能化する事が難しい。
+やりたいのは、各項目について、定数または意図を表すシンプルなオブジェクトを複数組み合わせて反映させる事。
+できれば定数のためになぞブロックやメッセージパッシングを使いたくはない、が仕方ない気もする. なんとかうまい解決方法はないか。
+なんかもう、まとめてブロックが一番効率的でわかりやすい気もしてきた。
 
