[clean] renamed CummulativeInteraction to Interaction.

--- a/MetalChartDev/MetalChartDev/TODO.txt
+++ b/MetalChartDev/MetalChartDev/TODO.txt
@@ -1,8 +1,24 @@
 
 
-・Axisを設定するためのクラスが現状Blockしかなくて、内部動作を把握している人間しか扱えない状態になっている。
-そもそもConfigurationは直行する設定が並んでいて、なかなか固定機能化する事が難しい。
-やりたいのは、各項目について、定数または意図を表すシンプルなオブジェクトを複数組み合わせて反映させる事。
-できれば定数のためになぞブロックやメッセージパッシングを使いたくはない、が仕方ない気もする. なんとかうまい解決方法はないか。
-なんかもう、まとめてブロックが一番効率的でわかりやすい気もしてきた。
+・使いづらいクラスが幾つかある（ユーザインタラクション、MCRenderableの実装クラス）
+　まず第一に、
+　GestureRecognizer -> Interpreter (+StateRestriction) -> Restriction -> Updator
+　という非常に迂遠な（だが正当な）方法でフィードバックがなされている事。
+　次に、それを補助する方法が用意されていない事。
+　まずそもそもとして、Updatorを分離した事の価値を理解してもらわなければ、話が始まらないだろう。
+　そもそも挙動を明確にする（実装依存の部分をなくす）のがモチベーションであって、単純化する事ではないはずだ。
+　
+
+・グラデーション、シャドウ、ボーダーの描画が全体的にサポートされてない
+　本当に必要かという話もあるが、グラデーションとボーダーはあってもいいかもしれない
+　棒は楽だが、折れ線はちょっと尋常じゃないほど難しい（重なる部分がとても複雑な事になる）
+　グラデーションは指定方法が半端じゃなく多くて、シェーダ実装が見えてこない。つまり後回し。
+
+・プロット領域の上に来るグリッド描画は実装優先度が最も高いが、効率的な実装方法は割と難しい。
+　擬似的に目盛りを使う事もできるが、ビューのサイズを意識して設定してやる必要があって、割と大変だったりする.
+　ただし別オブジェクトに分けると一貫性の維持が大変なので、もしもやるとすれば、軸にその機能をつけるのが自然である。
+
+・未だにフレームワークで出力できてない
+
+・目盛り同期のバグが残っている
 
