[add] add a convenience method to simplify user interaction setup.

--- a/MetalChartDev/MetalChartDev/TODO.txt
+++ b/MetalChartDev/MetalChartDev/TODO.txt
@@ -7,7 +7,8 @@
 　次に、それを補助する方法が用意されていない事。
 　まずそもそもとして、Updatorを分離した事の価値を理解してもらわなければ、話が始まらないだろう。
 　そもそも挙動を明確にする（実装依存の部分をなくす）のがモチベーションであって、単純化する事ではないはずだ。
-　
+　それよりも必要なのは、どうしたらあの煩雑な手続きを宣言的に、より短く記述できるかという事だ。
+　なにもそれを強制する必要はなく、選択肢が（できるだけ柔軟に）与えられる事が望ましい。
 
 ・グラデーション、シャドウ、ボーダーの描画が全体的にサポートされてない
 　本当に必要かという話もあるが、グラデーションとボーダーはあってもいいかもしれない
