[add] add subroutines to make client code shorter and simpler.

--- a/MetalChartDev/MetalChartDev/TODO.txt
+++ b/MetalChartDev/MetalChartDev/TODO.txt
@@ -22,3 +22,15 @@
 
 ・波線はちょっとちゃんとやりたいなーとおもってる。
 
+設定を簡潔に記述するための方法ってどんなだろうか？
+まず最低でも必要な手続きだが、
+
+・Chartを作る
+・デリゲートに設定する
+・GestureInterpreter+Restrictionを設定する
+・空間を設定する（10行程度）
+・系列を作る、これはその複雑さと数による、でも多分もう少しシンプルにできる
+・軸を作って設定する、ラベルを設定する（１軸１０行ちょい）
+・系列や軸をchartに追加する
+
+何がこんなに面倒なんだろう・・・
