[add] add convenience constructor for MCProjectionUpdater, [bugfix] fixed shaders for indexed primitives(wrapping behaviors).

--- a/MetalChartDev/MetalChartDev/TODO.txt
+++ b/MetalChartDev/MetalChartDev/TODO.txt
@@ -34,3 +34,7 @@
 ・系列や軸をchartに追加する
 
 何がこんなに面倒なんだろう・・・
+
+系列の設定はまぁ仕方ないにしても、空間・軸・ジェスチャはある程度簡潔にできるはずではある.
+ただし、どうやっても戻り値の制限を超えることはできない。
+できるだけシンプルにするのが理想ではあるが、根本的には設定用のオブジェクトを作るというのが解決方になる.
