--- a/MetalChartDev/MetalChartDev/TODO.txt
+++ b/MetalChartDev/MetalChartDev/TODO.txt
@@ -38,3 +38,7 @@
 系列の設定はまぁ仕方ないにしても、空間・軸・ジェスチャはある程度簡潔にできるはずではある.
 ただし、どうやっても戻り値の制限を超えることはできない。
 できるだけシンプルにするのが理想ではあるが、根本的には設定用のオブジェクトを作るというのが解決方になる.
+
+うーん設定項目が多すぎてどうしても楽にできない。
+ただ、空間を作るのにあそこまで複数の手順に分かれるのはやっぱり納得がいかない。
+
