[change] changed framework name(MCKit -> FMChart, now it tells its charting framework).

--- a/MetalChartDev/MetalChartDev/TODO.txt
+++ b/MetalChartDev/MetalChartDev/TODO.txt
@@ -1,6 +1,6 @@
 
 
-・使いづらいクラスが幾つかある（ユーザインタラクション、MCRenderableの実装クラス）
+・使いづらいクラスが幾つかある（ユーザインタラクション、FMRenderableの実装クラス）
 　次に、それを補助する方法が用意されていない事。
 　まずそもそもとして、Updatorを分離した事の価値を理解してもらわなければ、話が始まらないだろう。
 　そもそも挙動を明確にする（実装依存の部分をなくす）のがモチベーションであって、単純化する事ではないはずだ。
