--- a/MetalChartDev/MetalChartDev/TODO.txt
+++ b/MetalChartDev/MetalChartDev/TODO.txt
@@ -13,3 +13,33 @@
 
 ・波線はちょっとちゃんとやりたいなーとおもってる。
 
+背景領域のグリッドは別に軸と合わせる必要ない気がしてきた。
+あとはあれか、プロット領域でマスクする系統の話。
+仕組みとしてはやっぱりデプステストが候補なんだろうが、仕組み自体をすごくシンプルにしてしまったので、
+下手に弄れないというのはある。
+
+仕組み自体は共通で背景を特別扱いしないのに、それを考慮に入れた描画が必要になっている。
+つまり、
+
+・領域を複数に分けて、別々に把握できるようにする
+・背景側が通知できるような仕組みを提供する
+
+今、デプステストを使わないプリミティブがあることも問題だ。
+始めは使わないならそれはそれで、くらいに考えていたが、こういう風になってくるとそうもいかない。
+全てのプリミティブにデプステストを強制する。
+
+次、なぜこう言った問題が起きるのか、その背景は何かと言えば、
+矩形以外の方法で「領域を分割する」ためにはデプステストかステンシルテストが必要になるからだ。
+基本的にはシザーテストで切っているが、角丸に合わせて内容も切り取るには、デプステストの導入が必須になる。
+コストと見合っているかと言えば見合っていない気もするし、何かが正しくない感じはする。
+そもそもデプスで管理するならシザーテストがいるのか的な感じにもなってくる。
+
+・・・シザーテストやめる？
+んーなんかその方が良い気がしてきた。
+とすると、奥行きベースで整合性の取れたモデルを考える必要がある。
+
+自然に、２方向へのデプスレンジの調整をする方法はなにか？満たすべき条件は、
+
+・最低値は0
+・プロットエリアを特別なものとして扱わない
+・
