--- a/MetalChartDev/MetalChartDev/TODO.txt
+++ b/MetalChartDev/MetalChartDev/TODO.txt
@@ -42,4 +42,10 @@
 
 ・最低値は0
 ・プロットエリアを特別なものとして扱わない
-・
+
+できるだけ自然になるように実装はした、実際動いてる。
+点描画だけがちゃんとサポートしていないんだが、これはプロット領域からはみ出ても良いんじゃないかという気もする。ので後回し。
+グラデーションはデプスを使った描画が多分一番良い。
+でも狙った通りの効果を出すのはすごく難しいし、GPUへの負荷も大きい。
+
+
