--- a/MetalChartDev/MetalChartDev/TODO.txt
+++ b/MetalChartDev/MetalChartDev/TODO.txt
@@ -4,5 +4,23 @@
 　本当に必要かという話もあるが、グラデーションとボーダーはあってもいいかもしれない
 　棒は楽だが、折れ線はちょっと尋常じゃないほど難しい（重なる部分がとても複雑な事になる）
 　グラデーションは指定方法が半端じゃなく多くて、シェーダ実装が見えてこない。つまり後回し。
+　ボーダはもしかしたらデプスをうまく使えばできるのかもしれない。
+　ただ一般的には不透明色２つあるいはオーバレイなしで２つ重ねて作ればよくね？でもある。
+　破線と同じくパフォーマンスへの影響が大きいので、シェーダに含めるべきではない。
+
+・デプス値を利用したグラデーション導入
+　使い方が難しい上にパフォーマンス的なインパクトがでかい。コードの管理も難しい。
+　ほとんど遊びのレベルになる
+
+・ユーティリティとしてのローダクラス
+　クラスにする必要があるのかも怪しいが、やっとくと使い方の幅は広がるかもしれない。
+　アベレージとったりゼロパディングが楽になったり効率的だったりクリーンだったり。
 
 ・あとパフォーマンス調整くらいしかやる事ねぇ。
+　以外にもcontantのバッファへのアクセスよりも、flatでフラグメントシェーダへ色を渡す方がコストが高いらしい。
+　このあたりを加味すると、できるだけ頂点シェーダの戻り値のサイズは小さい方が好ましい、となる。
+　ただ、ぱっと見では、Lineがあとfloat1つ、Rect/Barがあと2つ＋αくらいが限界で、大したパフォーマンスゲインがあるようには見えない.
+　正直これは後回しでいい作業だと思う。
+
+・そろそろ本格的に公開を考えるべきフェーズに来てると思う。
+　まぁAndroid版の作業が一通り終わったら相談するべきだな。
