--- a/MetalChartDev/MetalChartDev/TODO.txt
+++ b/MetalChartDev/MetalChartDev/TODO.txt
@@ -1,13 +1,5 @@
 
 
-・グラデーション、シャドウ、ボーダーの描画が全体的にサポートされてない
-　本当に必要かという話もあるが、グラデーションとボーダーはあってもいいかもしれない
-　棒は楽だが、折れ線はちょっと尋常じゃないほど難しい（重なる部分がとても複雑な事になる）
-　グラデーションは指定方法が半端じゃなく多くて、シェーダ実装が見えてこない。つまり後回し。
-　ボーダはもしかしたらデプスをうまく使えばできるのかもしれない。
-　ただ一般的には不透明色２つあるいはオーバレイなしで２つ重ねて作ればよくね？でもある。
-　破線と同じくパフォーマンスへの影響が大きいので、シェーダに含めるべきではない。
-
 ・デプス値を利用したグラデーション導入
 　使い方が難しい上にパフォーマンス的なインパクトがでかい。コードの管理も難しい。
 　ほとんど遊びのレベルになる
@@ -16,11 +8,27 @@
 　クラスにする必要があるのかも怪しいが、やっとくと使い方の幅は広がるかもしれない。
 　アベレージとったりゼロパディングが楽になったり効率的だったりクリーンだったり。
 
-・あとパフォーマンス調整くらいしかやる事ねぇ。
-　以外にもcontantのバッファへのアクセスよりも、flatでフラグメントシェーダへ色を渡す方がコストが高いらしい。
-　このあたりを加味すると、できるだけ頂点シェーダの戻り値のサイズは小さい方が好ましい、となる。
-　ただ、ぱっと見では、Lineがあとfloat1つ、Rect/Barがあと2つ＋αくらいが限界で、大したパフォーマンスゲインがあるようには見えない.
-　正直これは後回しでいい作業だと思う。
-
 ・そろそろ本格的に公開を考えるべきフェーズに来てると思う。
 　まぁAndroid版の作業が一通り終わったら相談するべきだな。
+
+・普通の「並べて比較する」系統の棒グラフサポートに関して
+　-> 複数属性のもの＊複数データ、と考えると、
+
+ローダはどんなクラス構成というかモデルでやるべきか？
+アプリケーションコードをどう書きたいか？
+
+今回のそれでデリゲート＋ブロックの構成が一番綺麗に書けるのがわかったので踏襲するとして、
+index -> value への変換をサポートしたり、ブロックにしたり、で分割したものを配列で渡す、というのが楽か？
+そもそもシナリオの数が多すぎて、個別に対応するのはほぼ無理だ。
+Rxの方がずっとシンプルに書けるかもしれない。
+まぁ無理に当てはめると面倒な事になるので、手で書く。
+最終的にはfloat x 2かCGPointが返せる必要があって、xyを混ぜるか分けるかでそれぞれメリットデメリットがある。
+ただ、CGPointで返すくらいなら、手動で全部やれよって話なので、こっちを用意する必要性は低いと思う。
+あと初めから分けときゃ跡はなんとでもなるし。
+データの数（能動的なデータ）、xのデリゲート、yのデリゲート、で済むはず。
+いや、まずは典型的なシナリオをまとめるところから始めるべき。
+
+と、思ったんだが、なんだか雲行きが怪しい。
+そもそも分割は現実的ではなくて、物事が逆に難しくなる。
+
+
