[fix] fixed a bug causing a lag on debug launch.

--- a/MetalChartDev/MetalChartDev/TODO.txt
+++ b/MetalChartDev/MetalChartDev/TODO.txt
@@ -12,7 +12,14 @@
 　まぁAndroid版の作業が一通り終わったら相談するべきだな。
 
 ・普通の「並べて比較する」系統の棒グラフサポートに関して
-　-> 複数属性のもの＊複数データ、と考えると、
+　-> そもそもこういうデータを見せるには、向いていない。
+　　　目的が違うのだ。作っても良いが、少し違ったアプローチが必須と思われる。
+　　　まず考えられる限り、最も多彩な装飾パターンに対応できるシェーダが必要になる。
+　　　とは言っても、あとは「グラデーション」と「領域塗りつぶし」くらいだろうか。
+
+・もう一回チャートの可能な種類を揃えて、根本からオーバホールする？
+　まぁこっちは趣味だし、それでもいいかもしれない。
+　
 
 ローダはどんなクラス構成というかモデルでやるべきか？
 アプリケーションコードをどう書きたいか？
