[in progress] debugging line shader.

--- a/MetalChartDev/MetalChartDev/TODO.txt
+++ b/MetalChartDev/MetalChartDev/TODO.txt
@@ -14,7 +14,8 @@
 
 
 ・json等による設定の記述と適用 -> かなり難しい上に、大してメリットがないという結論.
-・折れ線のシェーダがちとバグってるかもしれない
+・折れ線のシェーダがちとバグってるかもしれない -> どうする？ -> devで極めて限定的な設定をして確認する.
+　多分、シェーダは壊れてない. 多分レンダリング時のAAが効かない問題が根本になっている.
 
 ・ユーザインタラクションのアニメーション追加
 ・attributedLineの追加
