[change] revised README.txt, add Animator handling in FMConfigurator

--- a/MetalChartDev/MetalChartDev/TODO.txt
+++ b/MetalChartDev/MetalChartDev/TODO.txt
@@ -3,17 +3,12 @@
 ・デプス値を利用したグラデーション導入
 　使い方が難しい上にパフォーマンス的なインパクトがでかい。コードの管理も難しい。
 　ほとんど遊びのレベルになる
+　-> 自由度の高さを考えると、グラデーションではなくUIImageを使った方法が良いと思われる.
+　　　またAttachmentにするとSeriesの間に挟む事ができないので、Interfaceに難がある.
 
 ・ユーティリティとしてのローダクラス
 　クラスにする必要があるのかも怪しいが、やっとくと使い方の幅は広がるかもしれない。
 　アベレージとったりゼロパディングが楽になったり効率的だったりクリーンだったり。
 
-・そろそろ本格的に公開を考えるべきフェーズに来てると思う。
-　まぁAndroid版の作業が一通り終わったら相談するべきだな。
-
-
-
 ・attributedLineの追加
-
-・devアプリにラベル追加（メンドクセーなって思うから、これをどうやったら楽にできるかを考える）
 
