--- a/MetalChartDev/MetalChartDev/TODO.txt
+++ b/MetalChartDev/MetalChartDev/TODO.txt
@@ -14,3 +14,5 @@
 
 ・panアニメーションの速度がおかしい
 
+・実際に使ってみてわかったが、indexedSeriesはマジで使う場面ない上にシェーダが分岐してクソめんどいしOrderedの名前つけんのもクソ長くてやってらんないし
+　PointPrimitiveを切り替えつつ表示しなきゃいけなくて本当ロクな結果になっていないので、削除する.
