[add] add attributed point.

--- a/MetalChartDev/MetalChartDev/TODO.txt
+++ b/MetalChartDev/MetalChartDev/TODO.txt
@@ -11,8 +11,6 @@
 　アベレージとったりゼロパディングが楽になったり効率的だったりクリーンだったり。
 
 ・attributedLine/Pointの追加
+・attributedBarがクラス構成/階層が明らかにおかしいので修正(シェーダもやばい感じ)
 
 ・panアニメーションの速度がおかしい
-
-・実際に使ってみてわかったが、indexedSeriesはマジで使う場面ない上にシェーダが分岐してクソめんどいしOrderedの名前つけんのもクソ長くてやってらんないし
-　PointPrimitiveを切り替えつつ表示しなきゃいけなくて本当ロクな結果になっていないので、削除する.
