--- a/MetalChartDev/MetalChartDev/TODO.txt
+++ b/MetalChartDev/MetalChartDev/TODO.txt
@@ -10,7 +10,7 @@
 　クラスにする必要があるのかも怪しいが、やっとくと使い方の幅は広がるかもしれない。
 　アベレージとったりゼロパディングが楽になったり効率的だったりクリーンだったり。
 
-・attributedLine/Pointの追加
+・attributedLine/Pointの追加 -> あとはlineのシェーダを書くだけ
 ・attributedBarの動作確認
 
 ・panアニメーションの速度がおかしい
