[fix] fix attributed bar.

--- a/MetalChartDev/MetalChartDev/TODO.txt
+++ b/MetalChartDev/MetalChartDev/TODO.txt
@@ -10,7 +10,8 @@
 　クラスにする必要があるのかも怪しいが、やっとくと使い方の幅は広がるかもしれない。
 　アベレージとったりゼロパディングが楽になったり効率的だったりクリーンだったり。
 
-・attributedLine/Pointの追加 -> 動作は確認、ただしDashLineのシェーダ（フラグメント？）の結果が若干おかしいとおもわれる.
-・attributedBarの動作確認
+・attributedLine -> 動作は確認、ただしDashLineのシェーダ（フラグメント？）の結果が若干おかしいとおもわれる.
 
 ・devアプリで初期表示がおかしい(setNeedsDisplayで治る) -> 急に再現しなくなった？
+・なんかどうやら完全にバグった。フレームバッファがイカれるのかなんなのか、とにかくその後まともに描画がされない。
+　深刻な事象に反して、その原因が全く予想できない（GPU側の処理のみが完全に止まってるが、普通に描画ループは動いてる）
