[add] add range fileter to introduce view(physical) size to data range.

--- a/MetalChartDev/MetalChartDev/TODO.txt
+++ b/MetalChartDev/MetalChartDev/TODO.txt
@@ -19,6 +19,8 @@
 　ビューを回転させるとスクロール動作が変わるのは、そもそもViewの回転に合わせて範囲を変化させる時、
 　Viewベースであるから悪い.　だからこれを解消すると、そこそこ安定はするはず.
 　だがそもそもの考え方として、rangeFilterの設計が多分間違ってる
+　そして、これを解消して物理サイズと紐付けた後、stateRestrictionの考え方及びstateと結びつける部分の設計の悪さが露呈する.
+　まずwindowRangeをなくしてみる.
 
 ・devアプリで初期表示がおかしい(setNeedsDisplayで治る) -> 急に再現しなくなった？
 ・なんかどうやら完全にバグった。フレームバッファがイカれるのかなんなのか、とにかくその後まともに描画がされない。
