[...] re-designing user interaction and feedback

--- a/MetalChartDev/MetalChartDev/TODO.txt
+++ b/MetalChartDev/MetalChartDev/TODO.txt
@@ -21,6 +21,20 @@
 　だがそもそもの考え方として、rangeFilterの設計が多分間違ってる
 　そして、これを解消して物理サイズと紐付けた後、stateRestrictionの考え方及びstateと結びつける部分の設計の悪さが露呈する.
 　まずwindowRangeをなくしてみる.
+　案の定scaleの部分で火を噴いてるが、そもそもscaleの事考える時に、lenをベースで考えるからそういう事になるんでは疑惑がある.
+　そりゃ、そっちのが随分分かりやすい気がするんだけど、もともとそういう風にはできてないから.
+　ただし、translationの計算にも絡んでて、やっぱりanchorとlengthが必要な気がしてしまう不思議.
+　そりゃ、そこからどれくらい動かせるかって話ですもん。どのくらい動かせるかを把握するには、windowの幅と初期位置を確定させる必要が確実にある.
+　あるいはせっかくrangeでとってんだから、translation自体をいや無理だ、起点がない.
+　いや、このあたりはもうどうしても受け入れざるを得ない部分かもしれない.
+　ただ、translationがviewのサイズで正規化されてるのは確実にやばいと思われる. よくない. これならまだpx単位の方がマシ.
+　確かにアレ作ってるとき、なにも考えてなかった. ほとんどdata空間だけ. なんでそうしたんだっけ・・・pxだとdata空間と結びつかないからか.
+　ならそれやれよって話だな.
+　で、実際にやろうとすると、stateRestrictionでのdata空間参照が難しくなるので.
+　ダメだ、この問題は闇が深すぎる, あまりにも直感と反する事が多すぎる.
+　どうもGestureRecognizerがstateを持とうとするのが、多分やばい. じゃあ逆にどうするのが良いのかに関しては、結構難しい所あるけど、
+　view空間とdata空間どちらも意識できるような構造が必要っぽい. あと、起点を意識しなくても良くなるよう、できれば状態はrangeFilterに持たせたいですね.
+　ま、あと重いですよね.
 
 ・devアプリで初期表示がおかしい(setNeedsDisplayで治る) -> 急に再現しなくなった？
 ・なんかどうやら完全にバグった。フレームバッファがイカれるのかなんなのか、とにかくその後まともに描画がされない。
