[etc] add comments to dashed line fragment shader.

--- a/MetalChartDev/MetalChartDev/TODO.txt
+++ b/MetalChartDev/MetalChartDev/TODO.txt
@@ -11,7 +11,8 @@
 　アベレージとったりゼロパディングが楽になったり効率的だったりクリーンだったり。
 
 ・attributedLine -> 動作は確認、ただしDashLineのシェーダ（フラグメント？）の結果が若干おかしいとおもわれる.
-　->あの症状で説明がつくのは、横方向の軸のscaleが間違っている事.
+　->あの症状で説明がつくのは、横方向の軸のscaleが間違っている事. -> そもそも横軸は一貫して[-1, 1]だし、y方向にもスケールはされてない
+　　よってシェーダ単体で見た時、あの挙動は説明がつかない.
 
 ・GestureInterpreterのscaleとtranslationを、view空間からdata空間へ変更するための方法が必要.
 　いままでのデータ空間に対し中立を保ってきた部分を特定の空間に結びつける事に問題はないのか、とか、問題はいろいろあるが、
