--- a/MetalChartDev/MetalChartDev/TODO.txt
+++ b/MetalChartDev/MetalChartDev/TODO.txt
@@ -10,12 +10,7 @@
 　クラスにする必要があるのかも怪しいが、やっとくと使い方の幅は広がるかもしれない。
 　アベレージとったりゼロパディングが楽になったり効率的だったりクリーンだったり。
 
-・attributedLine -> 動作は確認、ただしDashLineのシェーダ（フラグメント？）の結果が若干おかしいとおもわれる.
-　->あの症状で説明がつくのは、横方向の軸のscaleが間違っている事. -> そもそも横軸は一貫して[-1, 1]だし、y方向にもスケールはされてない
-　　よってシェーダ単体で見た時、あの挙動は説明がつかない.
-
-・なんかどうやら完全にバグった。フレームバッファがイカれるのかなんなのか、とにかくその後まともに描画がされない。
-　深刻な事象に反して、その原因が全く予想できない（GPU側の処理のみが完全に止まってるが、普通に描画ループは動いてる）
+・chartConfiguratorにwindowのサポートを追加（引数が多くてちょっと考えあぐねている.）
 
 まず状況を整理する。
 ・MTKViewでも関係ない
