--- a/MetalChartDev/MetalChartDev/TODO.txt
+++ b/MetalChartDev/MetalChartDev/TODO.txt
@@ -6,6 +6,9 @@
 　-> 自由度の高さを考えると、グラデーションではなくUIImageを使った方法が良いと思われる.
 　　　またAttachmentにするとSeriesの間に挟む事ができないので、Interfaceに難がある.
 
+・ProjectionUpdaterが暗に２次デカルト座標になってる
+・ChartConfiguratorのspaceプロパティが暗に２次デカルト座標になってる
+
 まず状況を整理する。
 ・MTKViewでも関係ない
 ・一定FPSにして、FPSを変えても関係ない
@@ -16,4 +19,6 @@
 　なにか別のabortかなんかで発覚してて、ちょっと違うって事なんだろうか？
 　drawableSizeを変えなくても、やはり起きている。
 　次はシェーダを変更してみる。
+　-> 今の所バグが確認できず. これが現象も合わせて考えると一番可能性が高い事は確実っぽい.
+　　　バグが出ていた時、使われていたのは、[AttributedPoint, AttributedBar, AttributedLine]、逆に安全が確認されてるのは[Bar]という事になる.
 
