--- a/MetalChartDev/MetalChartDev/TODO.txt
+++ b/MetalChartDev/MetalChartDev/TODO.txt
@@ -21,4 +21,5 @@
 　次はシェーダを変更してみる。
 　-> 今の所バグが確認できず. これが現象も合わせて考えると一番可能性が高い事は確実っぽい.
 　　　バグが出ていた時、使われていたのは、[AttributedPoint, AttributedBar, AttributedLine]、逆に安全が確認されてるのは[Bar]という事になる.
+　-> もしかしたら直ったかもしれない. shaderですらなく、pipelineStateとか問題だった可能性が出てきた. 特にshaderはなにもいじってないはずなのだが、正直よくわからない.
 
