--- a/MetalChartDev/MetalChartDev/TODO.txt
+++ b/MetalChartDev/MetalChartDev/TODO.txt
@@ -6,14 +6,12 @@
 　-> 自由度の高さを考えると、グラデーションではなくUIImageを使った方法が良いと思われる.
 　　　またAttachmentにするとSeriesの間に挟む事ができないので、Interfaceに難がある.
 
-・ProjectionUpdaterが暗に２次デカルト座標になってる
-・ChartConfiguratorのspaceプロパティが暗に２次デカルト座標になってる
+・３次デカルト系 ... まぁ色々大変だからね. MVP行列もいるし、まず第一どうやってデータ表示するのかだし
 
-まず状況を整理する。
 ・MTKViewでも関係ない
-・一定FPSにして、FPSを変えても関係ない
-・特によく画面回転で起きる事が多い、
-　今の所最低でも1回回転を挟んだあと？な気がするが、直接的にはスクロールでも出ているように見えた
+　一定FPSにして、FPSを変えても関係ない
+　特によく画面回転で起きる事が多い、
+　 今の所最低でも1回回転を挟んだあと？な気がするが、直接的にはスクロールでも出ているように見えた
 　だがMTKViewでdrawableのサイズのハンドリングをしている以上、問題はそこではないと思われる。
 　・・・そういえばMetalChartの中で、わざわざviewのサイズとってる所あったな。でもあれは確か、
 　なにか別のabortかなんかで発覚してて、ちょっと違うって事なんだろうか？
@@ -22,4 +20,6 @@
 　-> 今の所バグが確認できず. これが現象も合わせて考えると一番可能性が高い事は確実っぽい.
 　　　バグが出ていた時、使われていたのは、[AttributedPoint, AttributedBar, AttributedLine]、逆に安全が確認されてるのは[Bar]という事になる.
 　-> もしかしたら直ったかもしれない. shaderですらなく、pipelineStateとか問題だった可能性が出てきた. 特にshaderはなにもいじってないはずなのだが、正直よくわからない.
+　-> どういう事かわからないが、sampleCountで明らかな差が出ている. 2にすると今のところ１度も再現していないが1だと100%出る.
+　　　そしてなぜか、GPU不可が両者で変化しない. 実はこれが一番不可解である. そんな訳ねぇ. 絶対何かバグってる.
 
