[fix] remove MetalKit from linking requirements (now FMChart and FMChartSupport are identical).

--- a/MetalChartDev/MetalChartDev/TODO.txt
+++ b/MetalChartDev/MetalChartDev/TODO.txt
@@ -23,3 +23,6 @@
 　-> どういう事かわからないが、sampleCountで明らかな差が出ている. 2にすると今のところ１度も再現していないが1だと100%出る.
 　　　そしてなぜか、GPU不可が両者で変化しない. 実はこれが一番不可解である. そんな訳ねぇ. 絶対何かバグってる.
 
+・MTKViewがsetNeedsDisplayで思うように振舞わないのは、そもそも内部ループを止めているかららしい.
+　多分ドローコールは終わってるんだがセマフォで止められてるタイミングだろうと思われる。ちょっと挙動としては度し難いな。
+　-> 結局一旦はFMMetalViewで統一する. MTKView使うメリットマジでねぇ.
