[etc] commit before system update(changing working machine).

--- a/MetalChartDev/MetalChartDev/TODO.txt
+++ b/MetalChartDev/MetalChartDev/TODO.txt
@@ -22,7 +22,14 @@
 　-> もしかしたら直ったかもしれない. shaderですらなく、pipelineStateとか問題だった可能性が出てきた. 特にshaderはなにもいじってないはずなのだが、正直よくわからない.
 　-> どういう事かわからないが、sampleCountで明らかな差が出ている. 2にすると今のところ１度も再現していないが1だと100%出る.
 　　　そしてなぜか、GPU不可が両者で変化しない. 実はこれが一番不可解である. そんな訳ねぇ. 絶対何かバグってる.
+　この問題は不可解な事が多すぎる。一旦は忘れよう。（そういえば、初期はちゃんとsampleCountに応じて不可変わってたはずだよな・・・なぜだ？）
 
 ・MTKViewがsetNeedsDisplayで思うように振舞わないのは、そもそも内部ループを止めているかららしい.
 　多分ドローコールは終わってるんだがセマフォで止められてるタイミングだろうと思われる。ちょっと挙動としては度し難いな。
 　-> 結局一旦はFMMetalViewで統一する. MTKView使うメリットマジでねぇ.
+
+・一旦はscaledWindowLengthをプロトロル制御にする. つーかよく考えりゃ、anchoredWindowPositionもプロトコル使わなあかんのだが、だるすぎる.
+　ま所詮はデフォルト実装に過ぎないので、勝手に作って貰えばいい話なんだがね.
+　scaleはvelocityを使ってフレーム間の動きを予想するのが悪い。ていうか一番最初にmomentumPinchとか定義したアホが悪い。
+　常に現在のScaleとdestination（desiredScaleというよりも、desiredFactorという感じ？）とを近づけるように動くのが、望ましいだろうと思われる.
+　
