[add] add QuickHelp style comments to header files (continue), fix inproper interfaces of FMAxis/FMSharedAxis and behaviors.

--- a/MetalChartDev/MetalChartDev/TODO.txt
+++ b/MetalChartDev/MetalChartDev/TODO.txt
@@ -28,3 +28,8 @@
 　多分ドローコールは終わってるんだがセマフォで止められてるタイミングだろうと思われる。ちょっと挙動としては度し難いな。
 　-> 結局一旦はFMMetalViewで統一する. MTKView使うメリットマジでねぇ.
 
+・さて、ドキュメントを整備している時に気付いた、FMAxis, FMAxisLabel の共有問題.
+本来的に言えば、軸をシェアする目的なんて、ラベルをシェアする事以外にはない。
+ただし、ラベルをシェアするためにはFMUniformAxisConfigurationは単一インスタンス、かつ軸方向にぶれてはいけない。
+このあたり、正しく記述ができるなら、別に今のままで問題ない。そして軸を共有する時、それ以外の方法で整合性を保つ事は100%不可.
+あともう一点、
