[change] refactor FMUniformGridAttributes, change sample code(date label), change README.md

--- a/MetalChartDev/MetalChartDev/TODO.txt
+++ b/MetalChartDev/MetalChartDev/TODO.txt
@@ -33,3 +33,9 @@
 ただし、ラベルをシェアするためにはFMUniformAxisConfigurationは単一インスタンス、かつ軸方向にぶれてはいけない。
 このあたり、正しく記述ができるなら、別に今のままで問題ない。そして軸を共有する時、それ以外の方法で整合性を保つ事は100%不可.
 あともう一点、
+
+・英語ドキュメント作成中、どうしても章立て（というか何を書くべきか）がはっきりしないので整理する
+
+　1. 極力ヘッダを読めばわかることは割愛する -> ヘッダやクラス定義参照を用いる
+　2. 全体の構成と考え方を理解してもらうため、コンセプトの章はきちんと書く.
+　3. 何がしたいか、のシナリオ毎にサブセクションを立てて、そこに案内板の役割をさせる.
