[change] rename RectPadding, CFMRectPadding, rewrite sample codes in objective-c.

--- a/MetalChartDev/MetalChartDev/TODO.txt
+++ b/MetalChartDev/MetalChartDev/TODO.txt
@@ -39,3 +39,10 @@
 　1. 極力ヘッダを読めばわかることは割愛する -> ヘッダやクラス定義参照を用いる
 　2. 全体の構成と考え方を理解してもらうため、コンセプトの章はきちんと書く.
 　3. 何がしたいか、のシナリオ毎にサブセクションを立てて、そこに案内板の役割をさせる.
+
+・サンプルコードをSwiftで書くと逆にまどろっこしい（し効率悪いんでは？という気がしてくる）
+・両端のマージンを削るともうちょっとそれっぽくなるかも
+・割と真剣にトリプルバッファリングとか、setVertexBytesとか使うことを検討してみてもいいのかもしれない（GPU Frame Timeによる）
+　ただしこの場合でも、テクスチャの問題は解決しないし、まずトリプルバッファリングで以下のパーツがどう振る舞うかについて完全にイメージする必要がある
+　・ProjectionBuffer -> これはそもそも全てのdim/space依存グラフで統一して使える排他が必要、というより、キャプチャ的仕組みが必要かもしれない
+　・
