[refactor] change definition of 'FMMetalChart' and delegate.

--- a/MetalChartDev/MetalChartDev/TODO.txt
+++ b/MetalChartDev/MetalChartDev/TODO.txt
@@ -45,4 +45,11 @@
 ・割と真剣にトリプルバッファリングとか、setVertexBytesとか使うことを検討してみてもいいのかもしれない（GPU Frame Timeによる）
 　ただしこの場合でも、テクスチャの問題は解決しないし、まずトリプルバッファリングで以下のパーツがどう振る舞うかについて完全にイメージする必要がある
 　・ProjectionBuffer -> これはそもそも全てのdim/space依存グラフで統一して使える排他が必要、というより、キャプチャ的仕組みが必要かもしれない
-　・
+
+
+とりあえず、Nibで決まった名前で書けない問題は継承で解決できるが、その場合にはキャストが必要になる箇所がいくつかある。
+また、実際には今のヘッダの仕組みでは、うまく対応できない。
+確かマクロ定義では外部に持ち出せなかった経緯があるので、これは・・・違うな、あのヘッダでマクロ定義すりゃええのか.
+
+
+
