スクロールが途中で止まるバグの調査

--- a/MetalChartDev/MetalChartDev/TODO.txt
+++ b/MetalChartDev/MetalChartDev/TODO.txt
@@ -18,4 +18,11 @@
 　　　そしてなぜか、GPU不可が両者で変化しない. 実はこれが一番不可解である. そんな訳ねぇ. 絶対何かバグってる.
 　この問題は不可解な事が多すぎる。一旦は忘れよう。（そういえば、初期はちゃんとsampleCountに応じて負荷変わってたはずだよな・・・なぜだ？）
 
+・スクロールが止まる事がある（繰り返しスワイプしてると時折手を離したタイミングで止まる）
+　-> どうもFMGestureBeginのあと、FMGestureEndが来ない事があるらしい。
+　　　正確には、dispatcherはすべてのイベントを発行しているが、ハンドラーが何かしらの理由で持ってこれを弾いているとなる.
+　　　というか、そもそもなぜディスパッチャが全て配信を終えたあとにこれがくる？順序の問題か？
+　　　-> 本当の原因はタップで止まるようにした事が原因だったらしく、一瞬のタッチでGestureRecognizerは発火しないがhandlerは別経路で受けとってとまるパターンが存在する。
+　　　　　つまり、キャンセルされたジェスチャを拾ってる事が原因らしい。（というか、そもそもそもがキャンセルすらされていないというね.）
+　　　　　なので、これはこれでFMGestureRecognizer側にちゃんと手を入れる必要がある.
 
