fix a bug which is related to default ranges of FMProjectionUpdate, add a more gpu-intensive chart to the demo app.

--- a/MetalChartDev/MetalChartDev/TODO.txt
+++ b/MetalChartDev/MetalChartDev/TODO.txt
@@ -26,3 +26,17 @@
 　　　　　つまり、キャンセルされたジェスチャを拾ってる事が原因らしい。（というか、そもそもそもがキャンセルすらされていないというね.）
 　　　　　なので、これはこれでFMGestureRecognizer側にちゃんと手を入れる必要がある.
 
+
+・根本的な所で言うと、ユーザ操作によって変更をうけるオブジェクトはCPUサイドのみを持ち、GPU側と結び付く所でのみ値のコピーが起きるべきだと思う。
+　そしてその間のみがwrite-lockを受けるべきだ。writeに関してだって、atomicな書き込みが用意されているのが理想だしな。
+・複数のChartオブジェクトからの利用に耐えるように作るには、「writeロック」「アトミックな反映」「全体としての整合性を保つための仕組み」
+　が必要となる。write-lockとatomicな反映は、言って見ればreadをブロックしないトランザクションのようなものだ。
+　そしてその間の変更で全体としての整合性を保つには、トランザクションを伝搬するための非常に複雑な仕組みを要する.
+
+・まぁまずはサンプルの方を変えるか、今のままだと古いデバイスで高負荷をかける事ができない。
+
+・Logarithmicはちゃんと作った方がいい. ただまぁ、それは軸単位でコントロールできるべきだし、値の変換ができればそれでいいんだけど、
+　問題は軸描画とマッピングとが分かれてるっていう事なんだよね. どう考えるのが良いのか・・・今の仕組みというか考え方だと結構辛そうだな、
+　overhaulしないとまともにメンテ可能な形式にはならなさそうだ。いやぁまぁもともとガッツリと紐付ける形でAxisを定義したし、他の形式で使う事は
+　考えてなかったけど、これならまぁ
+
