moving to an other working machine...

--- a/MetalChartDev/MetalChartDev/TODO.txt
+++ b/MetalChartDev/MetalChartDev/TODO.txt
@@ -27,16 +27,19 @@
 　　　　　なので、これはこれでFMGestureRecognizer側にちゃんと手を入れる必要がある.
 
 
-・根本的な所で言うと、ユーザ操作によって変更をうけるオブジェクトはCPUサイドのみを持ち、GPU側と結び付く所でのみ値のコピーが起きるべきだと思う。
-　そしてその間のみがwrite-lockを受けるべきだ。writeに関してだって、atomicな書き込みが用意されているのが理想だしな。
 ・複数のChartオブジェクトからの利用に耐えるように作るには、「writeロック」「アトミックな反映」「全体としての整合性を保つための仕組み」
 　が必要となる。write-lockとatomicな反映は、言って見ればreadをブロックしないトランザクションのようなものだ。
 　そしてその間の変更で全体としての整合性を保つには、トランザクションを伝搬するための非常に複雑な仕組みを要する.
-
-・まぁまずはサンプルの方を変えるか、今のままだと古いデバイスで高負荷をかける事ができない。
 
 ・Logarithmicはちゃんと作った方がいい. ただまぁ、それは軸単位でコントロールできるべきだし、値の変換ができればそれでいいんだけど、
 　問題は軸描画とマッピングとが分かれてるっていう事なんだよね. どう考えるのが良いのか・・・今の仕組みというか考え方だと結構辛そうだな、
 　overhaulしないとまともにメンテ可能な形式にはならなさそうだ。いやぁまぁもともとガッツリと紐付ける形でAxisを定義したし、他の形式で使う事は
 　考えてなかったけど、これならまぁ
+
+・LineSeriesに負荷する用のグラデーション描画はどうフラグメントシェーダを定義すればよいのか。
+　正直、この機能に関してはこれが一番のネックである。
+1: 条件に応じた色の変更をどう実現するか、いかに柔軟な仕組みとできるか
+2: 分割された描画結果に不備はでないか・・・まぁそれを言ったらBarSeriesだって同じなのでおそらく問題ないはずだが。
+
+要素技術は「スイッチ」と「補間」だと思う。補間はシンプルに2または3の「点と色」を定義して補間してやる事、しかもその補間自体はシェーダ側の機能に任せてやる事ができる。
 
